--- a/wwww.html
+++ b/wwww.html
@@ -77,6 +77,8 @@ Then I used the cirlce pattern tool one more time and made it go around 10 times
 <img src="img/p12.png" width=740 height=370>
 Then I extruted it 25 mm. The rest of the pictures from the project are not allowing me to post them for some reason so I'll get those up tomorrow. The process was brining it in Prusaslicer, I changed the deminsions a bit to make it wider so it looked more like a pumkin, then I went into print settings -> verticle shells -> spiral base and clicked the box. Then I brought it to the printer and printed it out. It took 2 tries because the orange PLA wasn't working :(
 <img src="img/p13.png" width=740 height=370>
+Here is the final product with the plant inside, I named her Perfuma, everyone say hi.
+<img src="img/p14.jpg" width=740 height=370>
 So the next part was to create the watering can. I started out by making an oval, 50 mm long and 25mm high.
 <img src="img/w1.png" width=740 height=370>
 Then I extruted it 50 mm.
