--- a/wwwwww.html
+++ b/wwwwww.html
@@ -46,34 +46,79 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Page content -->
-<!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-</style>
-<body>
-
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
-  <div class="w3-display-left w3-padding-large w3-xlarge">
-    Week 6
-  </div>
-  <div class="w3-display-middle">
-    <h1 class=>COMING SOON</h1>
-    <hr class="w3-black" style="margin:auto;width:40%">
-  </div>
-  </div>
-</div>
-
-</body>
-</html>
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
+  <!-- The Band Section -->
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">WEEK 6</h2>
+    <div class="w3-blue" id="tour">
+    Another week more screenshots. This week there are 66 screenshots, fitting because its the 6th week.
+    <img src="img/ss4.png" width=740 height=370>
+    This week we had to create something out of carboard using Slicer for Fusion 360. The mini version is this week because next week we make it big. So the first thing I did before anything was download Slicer for Fusion 360
+    <img src="img/mm1.png" width=740 height=370>
+    Then I opened up Fusion 360 created a new sketch and made a circle with the radius of 50mm.
+    <img src="img/mm2.png" width=740 height=370>
+    Then I took that circle and extruded it 50mm I did this orignially to test if my idea was going to work. My plan was to try and modle an Among Us character (Picture in the files folder)
+    <img src="img/mm3.png" width=740 height=370>
+    Then I made a offset plane 15 mm from the bottom of my new cylinder
+    <img src="img/mm4.png" width=740 height=370>
+    I created a dot so I could refrence the center of the plane then I backed out of the sketch.
+    <img src="img/mm5.png" width=740 height=370>
+    Next I used the loft tool to create a cone connecting to the point in of offset plane.
+    <img src="img/mm6.png" width=740 height=370>
+    Then I rounded it out.
+    <img src="img/mm7.png" width=740 height=370>
+    This made 1 leg for the character so I went back into the original sketch and created a line 75mm away from the center of my original cirlce then made another cirlce at the end of the line.
+    <img src="img/mm8.png" width=740 height=370>
+    Then I did the same process with this leg as the other.
+    <img src="img/mm9.png" width=740 height=370>
+    <img src="img/mm10.png" width=740 height=370>
+    <img src="img/mm11.png" width=740 height=370>
+    <img src="img/mm12.png" width=740 height=370>
+    The next thing I did was create a sketch on top of one of the legs and made a line 75 mm from each center of the cirlce like the oringal sketch and set it as the mid point.
+    <img src="img/mm13.png" width=740 height=370>
+    <img src="img/mm14.png" width=740 height=370>
+    Then I created an oval around the center of the new line.
+    <img src="img/mm15.png" width=740 height=370>
+    <img src="img/mm16.png" width=740 height=370>
+    I extruded it 120 mm up. And that was going to be the body of the character.
+    <img src="img/mm17.png" width=740 height=370>
+    Then I used the top to create a offset plane 50mm from the top of the body for the head.
+    <img src="img/mm18.png" width=740 height=370>
+    I did the same process for the feet as I did with the head because it has a rounded head.
+    <img src="img/mm19.png" width=740 height=370>
+    <img src="img/mm20.png" width=740 height=370>
+    <img src="img/mm21.png" width=740 height=370>
+    Then I worked on creating the little mask for the front. I placed a dot along the line of the body and the head to use as my plane.
+    <img src="img/mm22.png" width=740 height=370>
+    <img src="img/mm23.png" width=740 height=370>
+    Then I made a cylinder 75mm wide and 50mm tall for the mask.
+    <img src="img/mm24.png" width=740 height=370>
+    <img src="img/mm25.png" width=740 height=370>
+    Then I extruded it 2mm and made a offset plane and did the same thing I did for the head and feet for the mask.
+    <img src="img/mm26.png" width=740 height=370>
+    Then I created a dot on the backside of the character to create a new offset plane for the backpack.
+    <img src="img/mm27.png" width=740 height=370>
+    <img src="img/mm28.png" width=740 height=370>
+    I created a few construction lines so I can get the box centered in the back of the character.
+    <img src="img/mm29.png" width=740 height=370>
+    then I extruded it 12.5mm so I can creat the offset plane and round it out with the same technique as before.
+    <img src="img/mm30.png" width=740 height=370>
+    <img src="img/mm31.png" width=740 height=370>
+    The next thing I did was bring it into Slicer for Fusion 360 and created the carboard material and its correct settings, 26 for height and 28 for length and a 1.570 thickness.
+    <img src="img/mm32.png" width=740 height=370>
+    Next I made the width 5 inches so the tallest part will be 5 inches tall. Then I had nothing to change so I brought all the parts into Adobe Illustator.
+    <img src="img/mm33.png" width=740 height=370>
+    I deselected all of them and made them their own little groups. I did this by double clicking the group and selecting the text and outline and copy and pasting them outside of the orignal group. Then I used the shortcut command g to group them together so it wouldnt just be the line and the text seperate.
+    <img src="img/mm34.png" width=740 height=370>
+    Next I put them together as closley as possible to not waste a lot of material.
+    <img src="img/mm35.png" width=740 height=370>
+    Next, I ungrouped one pair of text and outline so I could select all the text to make its own layer.
+    <img src="img/mm36.png" width=740 height=370>
+    <img src="img/mm37.png" width=740 height=370>
+    <img src="img/mm38.png" width=740 height=370>
+    I did that so I could set the outline to be the setting so the laser knows to cut it and not engrave it (.01mm). Then I put it into the computer into the lab and printed it out.
+    <img src="img/mm39.jpg" width=740 height=370>
+    Then I put him together and with using a lot of hot glue that is the final product!
+    <img src="img/mm40.jpg" width=740 height=370>
+    <img src="img/mm41.jpg" width=740 height=370>
+    <a href="https://drive.google.com/drive/folders/1uu8Tyxxxup0yclwmKhrHhzLhxezxpPpf?usp=sharing"> Files for this week </a>
