--- a/wwwwwww.html
+++ b/wwwwwww.html
@@ -45,34 +45,36 @@ body {font-family: "Lato", sans-serif}
   <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
 </div>
 
-<!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-</style>
-<body>
+<!-- Page content -->
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
+  <!-- The Band Section -->
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">WEEK 7</h2>
+    <div class="w3-blue" id="tour">
+    For this week we had to make our mini model big... like 2 feet tall big. So the first thing I did was make the height of my material in slicer for fusion 360 24 in and the width of it 13. It is acutally reversed but I made it so the height of my guy is 24 in.
+    <img src="img/ba1.png" width=740 height=370>
+    The next thing I did was create a new project in Adobe Illustrator the same size of the material to put all of my pieces on.
+    <img src="img/ba2.png" width=740 height=370>
+    I draged them in and it eneded up need 3 sheets of cardboard.
+    <img src="img/ba3.png" width=740 height=370>
+    I did the same thing that I did for the Mini version which was squeeze everything together to hopefully not waste material. Then selected each one and seperated the text to the outlines so I can laser cut and engrave them.
+    <img src="img/ba4.png" width=740 height=370>
+    <img src="img/ba5.png" width=740 height=370>
+    <img src="img/ba6.png" width=740 height=370>
+    Then I brought it to the laser cutter and set my vector speed to the new setting for the new laser and cut them out.
+    <img src="img/ba7.jpg" width=740 height=370>
+    Then I remembered I need to add lines to cut the material that is empty so I did that now.
+    <img src="img/ba8.jpg" width=740 height=370>
+    I had some trouble with the second sheet so it took a few attempts. It was cutting off some of the guy so I just kept trying until it worked.
+    <img src="img/ba9.jpg" width=740 height=370>
+    Then I had all the pieces, and started putting them all together. I ended up using a lot of hot glue and took me a WHILE to compelte them. Even with the instructions I still had a hard time... I dont think I am all that good at puzzles.
+    <img src="img/ba10.jpg" width=740 height=370>
+    <img src="img/ba11.jpg" width=246 height=370>
+    <img src="img/ba12.jpg" width=246 height=370>
+    <img src="img/ba13.jpg" width=246 height=370>
+    This is the final product and it is infact 24 inches tall. As shown below my attempt of messuring him.
+    <img src="img/ba14.jpg" width=740 height=370>
+    <img src="img/ba15.jpg" width=740 height=370>
+    Now he lives in my room just sitting in the corner, and once I showed my friends him, they all wanted one.
+    <a href="https://drive.google.com/drive/folders/1RW-W8czfW0f5hLWbEyV4wbxqBplXoTDU?usp=sharing"> Files for this week </a>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
-  <div class="w3-display-left w3-padding-large w3-xlarge">
-    Week 7
-  </div>
-  <div class="w3-display-middle">
-    <h1 class=>COMING SOON</h1>
-    <hr class="w3-black" style="margin:auto;width:40%">
-  </div>
-  </div>
-</div>
-
-</body>
-</html>
