--- a/wwwwwwwwww.html
+++ b/wwwwwwwwww.html
@@ -156,3 +156,4 @@ body {font-family: "Lato", sans-serif}
     <img src="img/E52.png" width=740 height=370>
     Then I ran it to make sure that it worked and it did.
     <img src="img/E53.png" width=740 height=370>
+<a href="https://docs.google.com/document/d/1B0djx5oQEYbAys9nSuhvWKu9uKAvK0XsgEKIAPRgwFg/edit?usp=sharing"> Files for this week </a>
