--- a/wwwwwwww.html
+++ b/wwwwwwww.html
@@ -51,3 +51,40 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">WEEK 8</h2>
     <div class="w3-blue" id="tour">
+This week was vinyl cutting, meaning we got to make a sweatshirt. The moment the assigment came up I knew I wanted to make something with the dumb quotes I have with my friends. We have had a google doc with a list of quotes for well over a year and there are some iconic ones.
+    <img src="img/SW1.png" width=740 height=370>
+    I tasked myself and my friends to create a new doc with some of the best quotes from the main group... and well... I had a list to go through. The next few pictures are just a collection of quotes I had to limit.
+<img src="img/SW2.png" width=740 height=370>
+<img src="img/SW3.png" width=740 height=370>
+<img src="img/SW4.png" width=740 height=370>
+<img src="img/SW5.png" width=740 height=370>
+When I did I opened a new file in Adobe Illustrator.
+<img src="img/SW6.png" width=740 height=370>
+I copy and pasted every quote I was going to use and typed it in comic sans because it is the WROST font out there. I thought it was fitting.
+<img src="img/SW72.png" width=740 height=370>
+The next thing I did was email it to myself and opened it up on the computer in the lab. I brought it in using the little green tree and mouse button icon at the top and made sure to flip the text so it wouldn't be backwards on the sweatshirt.
+<img src="img/SW7.jpg" width=740 height=370>
+Then I set up the machine and put in the settings for regular fabric vynl which is shown below.
+<img src="img/SW8.jpg" width=740 height=370>
+Next I cut it out.
+<img src="img/Sw85.jpg" width=740 height=370>
+Then came the very VERY slow process of peeling everything off and making it all nice. I ended up messing up a few words so I just re cut those words so I can add them to the sweatshirt in the pressing stage.
+<img src="img/SW9.jpg" width=740 height=370>
+Next I pre pressed the sweatshirt to make it all flat.
+<img src="img/SW10.jpg" width=740 height=370>
+<img src="img/SW11.jpg" width=740 height=370>
+Then I lined up the text and pressed it down.
+<img src="img/SW12.jpg" width=740 height=370>
+<img src="img/SW13.jpg" width=740 height=370>
+Then I added the other words that were missing and pressed it down.
+<img src="img/SW14.jpg" width=740 height=370>
+the next thing was I downloaded a quote mark to use for my graphic.
+<img src="img/SW15.jpg" width=740 height=370>
+Then I pressed it down.
+<img src="img/SW16.jpg" width=740 height=370>
+And here is the final sweatshirt.
+<img src="img/SWfront.jpg" width=740 height=370>
+<img src="img/SWback.jpg" width=740 height=370>
+Here is pepper obviously enjoying the sweatshirt as I am holding her, she gives it a 10/10
+<img src="img/SWpep.jpg" width=740 height=370>
+<a href="https://drive.google.com/drive/folders/1at490rMk07_bk1EpzkhQQYtQjtgR29NO?usp=sharing"> Files for this week </a>
