--- a/wwwwwwwww.html
+++ b/wwwwwwwww.html
@@ -51,3 +51,18 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">WEEK 9</h2>
     <div class="w3-blue" id="tour">
+This week is the introduction to electorinics. In science fields they use the International System of Units (SI units) to measure different things. SI unites consist of 7 standard unites, meter, second, kilogram, ampere, kelvin, mole, and candela.
+<img src="img/SIunit.jpg" width=740 height=370>
+SI units can also have prefexis like kilo, centi, deci, milli to say how much of it you are working with so there is no need for all of those pesky zeros.
+<img src="img/prefex.png" width=740 height=370>
+When using electricity the main unites are, voltage, amperage (which is the current) and resistance. A easy way to understand these are with a water analogy. In the picture below the first image represents the voltage. Voltage is basically the water, it wants to go where there is a lot of water to where there is little so it flows through the system. Voltage is the current, it wants to circulate and flow where the levels are low. The second image is the amperage, the current. The bigger pipe the more current can get through, meaning that there is more current. The smaller the pipe means less current. The last picture represents resistance, if the pipe is nice and open the water can flow right on through with no issues. But the second picture the pipe is bent so it is harder for the water to go through, adding restriction to the flow. Thier actual definitions are, voltage, the difference in electrical potential energy, amperage, the flow rate of charge and resistance, how much the charge is impeded.
+<img src="img/Wateran.png" width=740 height=370>
+ Moving on to open and closed circuits, an open circuit the current can not flow completly around, something is missing to allow it. In a close circuit, the current can flow all in a circle continuously.
+ <img src="img/cir.jpg" width=740 height=370>
+A short ciruit occurs when there is not enough resistance in the circuit causing a problem. This is bad because it can start a fire and or serisouly damage something.
+<img src="img/short.jpg" width=740 height=370>
+Series circuits are a circuit with more than one resistor that are all in a series together. These resistors can either be lined up next to each other or parallel to each other, that is called a parallel circuit. Each loop connects thier own loop with the battery.
+<img src="img/type.webp" width=740 height=370>
+There are also complex circuits which are usually a combination of parallel and series circuits. It is easier to solve them when broken down to parallel and series circuits
+<img src="img/complex.gif" width=740 height=370>
+<a href="https://drive.google.com/drive/folders/1RuJZrf_R-ufBCOvqSA-t_35AUMq2nDNi?usp=sharing"> Worksheet </a>
